embeddedsw: add new git submodule
Contains the PMU firmware source code.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "crosstool-ng"]
 	path = crosstool-ng
 	url = git://github.com/crosstool-ng/crosstool-ng.git
+[submodule "embeddedsw"]
+	path = embeddedsw
+	url = git://github.com/Xilinx/embeddedsw.git
